--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>Udacity Cloud DevOps</title>
 </head>
 <body>
-	<p>Hello World, my name is Oluwatobi Olufuwa</pp>
+	<p>Hello World, my name is Oluwatobi Olufuwa</p>
 </body>
 </html>
